# sales-data-pipeline

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PROJECT-STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-profiling.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pipeline.yml  release.yml
api/: __init__.py  app.py  database.py  models.py
config/: config.yaml  schema.yaml
docs/: architecture.md  data_dictionary.md
notebooks/: eda.ipynb
orchestration/: pipeline.py
src/extract/: __init__.py  extractor.py
src/load/: __init__.py  loader.py
src/quality/: __init__.py  drift_detector.py  profiler.py  validators.py
src/transform/: __init__.py  cleaner.py  feature_engineer.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_cleaner.py  test_extractor.py  test_feature_engineer.py  test_validators.py
